i am now faced with the grave choice of box shadow vs clipped buttons. also body width fixed

--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@ body{
     font-family: Tahoma;
     background-color: #223;
     color: #fff;
+    width: 100%;
 }
 h1 {
     text-align: center;
@@ -17,6 +18,7 @@ h1 {
     line-height: 0.7ch;
     padding-top: .1em;
     margin-bottom: .1em;
+    margin-top: 0;
     height: 2em;
     width: 100%;
     left: 0px;
@@ -70,6 +72,7 @@ menu > button {
     transition-property: bottom, height, color, background-color, width; 
     transition-duration:  0.4s;
     background-color: #fff;
+    box-shadow: 4px 4px 0px #000;
     & > input {
         display: none;
     };
